<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.malafeyev.alexey.mobapp.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:background="@color/colorPrimary"
        android:onClick="startHelloToastActivity"
        android:text="@string/button_label_hello_toast"
        android:textColor="@color/colorWhite" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:background="@color/colorPrimary"
        android:onClick="startHelloRelativeActivity"
        android:text="@string/button_label_hello_relative"
        android:textColor="@color/colorWhite" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:background="@color/colorPrimary"
        android:onClick="startHelloConstraintActivity"
        android:text="@string/button_label_hello_constraint"
        android:textColor="@color/colorWhite" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:background="@color/colorPrimary"
        android:onClick="startScrollingTextActivity"
        android:text="@string/button_label_scrolling_text"
        android:textColor="@color/colorWhite" />

</LinearLayout>
