<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_regular">

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/text_header_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header_reply"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button_main"
        android:layout_toStartOf="@id/button_main"
        android:hint="Please Enter Message" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main" />

    <Button
        android:id="@+id/button_main_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_message_reply"
        android:onClick="launchSecondActivity"
        android:text="@string/show_article_1" />

    <Button
        android:id="@+id/button_main_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_main_one"
        android:onClick="launchSecondActivity"
        android:text="@string/show_article_2" />

    <Button
        android:id="@+id/button_main_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_main_two"
        android:onClick="launchSecondActivity"
        android:text="@string/show_article_3" />

    <Button
        android:id="@+id/button_open_groceries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_main_three"
        android:onClick="launchGroceriesActivity"
        android:text="@string/button_label_shopping_list" />

    <Button
        android:id="@+id/button_open_intents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_open_groceries"
        android:background="@color/colorPrimary"
        android:onClick="launchImplicitIntentsPracticeActivity"
        android:padding="@dimen/padding_regular"
        android:text="Implicit Intents"
        android:textColor="@color/colorWhite" />

</RelativeLayout>