<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/activity_margin"
android:background="@drawable/mvimg_20180310_170434"
android:orientation="vertical"
tools:context="com.malafeyev.alexey.mobapp.HelloToastActivity">

<Button
    android:id="@+id/btnToast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:onClick="onClick"
    android:textColor="@color/colorWhite"
    android:text="@string/toastMessage" />

<TextView
    android:id="@+id/txvToast"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:onClick="onClick"
    android:text="@string/show_initial_value"
    android:textAlignment="center"
    android:textColor="@color/myBackgroundColor"
    android:textSize="@dimen/show_text_size"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:gravity="center"/>

<Button
    android:id="@+id/btnCount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:textColor="@color/colorWhite"
    android:text="@string/button_label_count" />

</LinearLayout>
