<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.malafeyev.alexey.mobapp.ScrollingTextActivity">

    <TextView
        android:id="@+id/text_view_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/text_view_title_text"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_subtitle_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title_id"
        android:padding="@dimen/padding_regular"
        android:text="@string/text_view_subtitle_text"
        android:textAppearance="@android:style/TextAppearance" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_subtitle_id">

        <TextView
            android:id="@+id/text_view_detail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/text_view_detail_text" />
    </ScrollView>
</RelativeLayout>
